--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "webpack serve --env port=3000 clientID=412cdbcbc80245988646b1f3aae71886",
+    "start": "webpack serve --env port=3000 clientID=412cdbcbc80245988646b1f3aae71886 apiUrl=https://cloud-api.yandex.net/",
     "build:dev": "webpack --env mode= clientID=412cdbcbc80245988646b1f3aae71886",
     "build:prod": "webpack --env mode=production clientID=412cdbcbc80245988646b1f3aae71886",
     "lint": "eslint \"**/*.{ts,tsx}\"",
@@ -20,6 +20,7 @@
     "classnames": "^2.3.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-icons": "^4.10.1",
     "react-redux": "^8.1.1",
     "react-router-dom": "^6.14.2"
   },
